--- a/package.json
+++ b/package.json
@@ -10,8 +10,45 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@apollo/client": "^3.0.0-beta.48",
+    "@react-native-community/async-storage": "^1.10.1",
+    "@react-native-community/geolocation": "^2.0.2",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/bottom-tabs": "^5.4.4",
+    "@react-navigation/drawer": "^5.7.4",
+    "@react-navigation/native": "^5.3.2",
+    "@react-navigation/stack": "^5.3.5",
+    "@react-navigation/tabs": "^0.0.0-alpha.12",
+    "apollo-link-rest": "^0.8.0-beta.0",
+    "appcenter": "^3.0.2",
+    "appcenter-analytics": "^3.0.2",
+    "appcenter-crashes": "^3.0.2",
+    "geolib": "^3.2.1",
+    "graphql-anywhere": "^4.2.7",
+    "hex-to-rgba": "^2.0.1",
+    "i18n-js": "^3.5.1",
+    "immutability-helper": "^3.0.2",
+    "lottie-react-native": "^3.3.2",
+    "qs": "^6.9.4",
     "react": "16.11.0",
-    "react-native": "0.62.2"
+    "react-native": "0.62.2",
+    "react-native-animatable": "^1.3.3",
+    "react-native-camera": "^3.26.0",
+    "react-native-code-push": "^6.2.0",
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-google-maps": "^1.0.0",
+    "react-native-google-places-autocomplete": "^1.6.0",
+    "react-native-localize": "^1.4.0",
+    "react-native-maps": "^0.27.1",
+    "react-native-onesignal": "^3.7.3",
+    "react-native-pages": "^0.9.0",
+    "react-native-reanimated": "^1.8.0",
+    "react-native-safe-area-context": "^1.0.0",
+    "react-native-screens": "^2.7.0",
+    "react-native-svg": "^12.1.0",
+    "react-native-vector-icons": "^6.6.0",
+    "react-native-webview": "^9.4.0",
+    "styled-components": "^5.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
