--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-animatable": "^1.3.3",
     "react-native-camera": "^3.26.0",
     "react-native-code-push": "^6.2.0",
+    "react-native-device-info": "^5.5.7",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-google-maps": "^1.0.0",
     "react-native-google-places-autocomplete": "^1.6.0",
@@ -43,8 +44,10 @@
     "react-native-onesignal": "^3.7.3",
     "react-native-pages": "^0.9.0",
     "react-native-reanimated": "^1.8.0",
+    "react-native-redash": "^14.0.4",
     "react-native-safe-area-context": "^1.0.0",
     "react-native-screens": "^2.7.0",
+    "react-native-snap-carousel": "^3.9.0",
     "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-webview": "^9.4.0",
