--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-native-svg": "^12.1.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-webview": "^9.4.0",
+    "react-viro": "^2.17.0",
     "styled-components": "^5.1.0"
   },
   "devDependencies": {
