Added Expo + Face Detector

--- a/package.json
+++ b/package.json
@@ -19,10 +19,18 @@
     "@react-navigation/native": "^5.3.2",
     "@react-navigation/stack": "^5.3.5",
     "@react-navigation/tabs": "^0.0.0-alpha.12",
+    "@unimodules/react-native-adapter": "^5.2.0",
+    "add": "^2.0.6",
     "apollo-link-rest": "^0.8.0-beta.0",
     "appcenter": "^3.0.2",
     "appcenter-analytics": "^3.0.2",
     "appcenter-crashes": "^3.0.2",
+    "expo-asset": "^8.1.5",
+    "expo-camera": "^8.2.0",
+    "expo-face-detector": "^8.1.0",
+    "expo-graphics": "^1.1.0",
+    "expo-permissions": "^8.1.0",
+    "expo-three-ar": "^0.0.0",
     "geolib": "^3.2.1",
     "graphql-anywhere": "^4.2.7",
     "hex-to-rgba": "^2.0.1",
@@ -49,10 +57,13 @@
     "react-native-screens": "^2.7.0",
     "react-native-snap-carousel": "^3.9.0",
     "react-native-svg": "^12.1.0",
+    "react-native-unimodules": "^0.9.1",
     "react-native-vector-icons": "^6.6.0",
     "react-native-webview": "^9.4.0",
     "react-viro": "^2.17.0",
-    "styled-components": "^5.1.0"
+    "styled-components": "^5.1.0",
+    "three": "^0.116.1",
+    "yarn": "^1.22.4"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
