--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,5 +1,6 @@
 platform :ios, '10.0'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
+require_relative '../node_modules/react-native-unimodules/cocoapods.rb'
 
 def add_flipper_pods!(versions = {})
   versions['Flipper'] ||= '~> 0.33.1'
@@ -83,13 +84,15 @@ target 'maisonmata' do
   pod 'react-native-google-maps', path: '../node_modules/react-native-maps' # <~~ if you need GoogleMaps support on iOS
   pod 'Google-Maps-iOS-Utils'
   pod 'GoogleUtilities'
-  pod 'GoogleAppMeasurement'
   pod 'react-native-geolocation', :path => '../node_modules/@react-native-community/geolocation'
   pod 'RNReanimated', :path => '../node_modules/react-native-reanimated'
   pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'  
 
   pod 'ViroReact', :path => '../node_modules/react-viro/ios/'
   pod 'ViroKit_static_lib', :path => '../node_modules/react-viro/ios/dist/ViroRenderer/static_lib'
+
+  use_native_modules!
+  use_unimodules!
 
   target 'maisonmataTests' do
     inherit! :complete
