Added glasses mask as a test

--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "appcenter": "^3.0.2",
     "appcenter-analytics": "^3.0.2",
     "appcenter-crashes": "^3.0.2",
+    "expo": "^37.0.11",
     "expo-asset": "^8.1.5",
     "expo-camera": "^8.2.0",
     "expo-face-detector": "^8.1.0",
     "expo-graphics": "^1.1.0",
     "expo-permissions": "^8.1.0",
+    "expo-sensors": "^8.1.0",
     "expo-three-ar": "^0.0.0",
     "geolib": "^3.2.1",
     "graphql-anywhere": "^4.2.7",
