--- a/ios/maisonmata/Info.plist
+++ b/ios/maisonmata/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>maisonmata</string>
+	<string>$(PRODUCT_NAME)</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -22,6 +22,8 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
@@ -53,6 +55,8 @@
 	<string>Used to record videos</string>
 	<key>NSMotionUsageDescription</key>
 	<string>Used for Try On feature </string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Used for AR</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>AntDesign.ttf</string>
