--- a/ios/maisonmata.xcodeproj/xcshareddata/xcschemes/maisonmata.xcscheme
+++ b/ios/maisonmata.xcodeproj/xcshareddata/xcschemes/maisonmata.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "maisonmata.app"
+               BuildableName = "Maison Mata.app"
                BlueprintName = "maisonmata"
                ReferencedContainer = "container:maisonmata.xcodeproj">
             </BuildableReference>
@@ -55,7 +55,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "maisonmata.app"
+            BuildableName = "Maison Mata.app"
             BlueprintName = "maisonmata"
             ReferencedContainer = "container:maisonmata.xcodeproj">
          </BuildableReference>
@@ -72,7 +72,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "maisonmata.app"
+            BuildableName = "Maison Mata.app"
             BlueprintName = "maisonmata"
             ReferencedContainer = "container:maisonmata.xcodeproj">
          </BuildableReference>
