--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "postinstall": "sh postinstall.sh"
   },
   "dependencies": {
     "@apollo/client": "^3.0.0-beta.48",
+    "@expo/vector-icons": "^10.2.0",
     "@react-native-community/async-storage": "^1.10.1",
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "^0.1.10",
@@ -29,9 +31,11 @@
     "expo-asset": "^8.1.5",
     "expo-camera": "^8.2.0",
     "expo-face-detector": "^8.1.0",
+    "expo-gl": "^8.1.0",
     "expo-graphics": "^1.1.0",
     "expo-permissions": "^8.1.0",
     "expo-sensors": "^8.1.0",
+    "expo-three": "^5.4.0",
     "expo-three-ar": "^0.0.0",
     "geolib": "^3.2.1",
     "graphql-anywhere": "^4.2.7",
