Added product detail screen

--- a/ios/maisonmata/Info.plist
+++ b/ios/maisonmata/Info.plist
@@ -85,6 +85,7 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
