--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   },
   "dependencies": {
     "@apollo/client": "^3.0.0-beta.48",
-    "@expo/vector-icons": "^10.2.0",
     "@react-native-community/async-storage": "^1.10.1",
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "^0.1.10",
@@ -47,6 +46,7 @@
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-animatable": "^1.3.3",
+    "react-native-arkit": "git+https://github.com/HyacintheHamon/react-native-arkit.git",
     "react-native-camera": "^3.26.0",
     "react-native-code-push": "^6.2.0",
     "react-native-device-info": "^5.5.7",
@@ -62,8 +62,10 @@
     "react-native-redash": "^14.0.4",
     "react-native-safe-area-context": "^1.0.0",
     "react-native-screens": "^2.7.0",
+    "react-native-scroll-bottom-sheet": "^0.6.0",
     "react-native-snap-carousel": "^3.9.0",
     "react-native-svg": "^12.1.0",
+    "react-native-tab-view": "^2.14.2",
     "react-native-unimodules": "^0.9.1",
     "react-native-vector-icons": "^6.6.0",
     "react-native-webview": "^9.4.0",
